--- a/Notebooks/LoadBravaisLatticeModels.ipynb
+++ b/Notebooks/LoadBravaisLatticeModels.ipynb
@@ -2,31 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
     "from Models.ResNet import ResnetConfig, ResnetClassifier\n",
     "from Data.Data import DiffractionDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset=torch.load(\"Data/BravaisLattice_Data.pt\")\n",
-    "x=test_dataset[\"X\"].float()+1e-3\n",
-    "y=test_dataset[\"Y\"].long()\n",
-    "x=torch.reshape(x, (10, 1, 3042))\n",
-    "test_dataset=DiffractionDataset(x, y, False)"
+    "test_dataset=DiffractionDataset(\"../Data/BravaisLattice_Data.pt\", categorical='Bravais Lattice')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -35,14 +33,14 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Semi-supervised Model using 50% of the data for labeled training\n",
-    "state_dict=torch.load(\"Models/Bravais_model_SGAN.pth\")\n",
+    "state_dict=torch.load(\"../Models/Bravais_model_SGAN.pth\")\n",
     "config = ResnetConfig(\n",
     "        input_dim = 1,\n",
     "        output_dim = 14,\n",
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +108,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,13 +117,13 @@
     "#Supervised Model using 90% of the data\n",
     "supervised=ResnetClassifier(config)\n",
     "supervised.eval().float()\n",
-    "state_dict=torch.load(\"Models/Bravais_model_supervised.pth\")\n",
+    "state_dict=torch.load(\"../Models/Bravais_model_supervised.pth\")\n",
     "supervised.load_state_dict(state_dict['model_state_dict'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +159,6 @@
     "accuracy=(torch.sum((predictions==test_dataset.labels))/len(predictions))\n",
     "print(accuracy)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
