--- a/Notebooks/LoadSpaceGroupModels.ipynb
+++ b/Notebooks/LoadSpaceGroupModels.ipynb
@@ -2,31 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from Models.ResNet import ResnetConfig, ResnetClassifier\n",
     "from Data.Data import DiffractionDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset=torch.load(\"Data/SpaceGroup_Data.pt\")\n",
-    "x=test_dataset[\"X\"].float()+1e-3\n",
-    "y=test_dataset[\"Y\"].long()\n",
-    "x=torch.reshape(x, (10, 1, 3041))\n",
-    "test_dataset=DiffractionDataset(x, y, False)"
+    "test_dataset=DiffractionDataset(\"../Data/SpaceGroup_Data.pt\", categorical='Space Group')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -35,14 +33,14 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Semi-supervised Model using 50% of the data for labeled training\n",
-    "state_dict=torch.load(\"Models/Space_Group_model_SGAN.pth\")\n",
+    "state_dict=torch.load(\"../Models/Space_Group_model_SGAN.pth\")\n",
     "config = ResnetConfig(\n",
     "        input_dim = 1,\n",
     "        output_dim = 144,\n",
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +150,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,13 +159,13 @@
     "#Supervised Model using 90% of the data\n",
     "supervised=ResnetClassifier(config)\n",
     "supervised.eval().float()\n",
-    "state_dict=torch.load(\"Models/Space_Group_model_supervised.pth\")\n",
+    "state_dict=torch.load(\"../Models/Space_Group_model_supervised.pth\")\n",
     "supervised.load_state_dict(state_dict['model_state_dict'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -245,13 +243,6 @@
     "top_5_acc=torch.sum(top_5_preds==labels)/labels.shape[0]\n",
     "print(top_5_acc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
