--- a/Notebooks/LoadSpaceGroupModels.ipynb
+++ b/Notebooks/LoadSpaceGroupModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset=DiffractionDataset(\"../Data/SpaceGroup_Data.pt\", categorical='Space Group')"
+    "ds=DiffractionDataset(\"../Data/SpaceGroup_Data.pt\", categorical='Space Group')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,10 +73,10 @@
     }
    ],
    "source": [
-    "logits=net(test_dataset.data).logits\n",
+    "logits=net(ds.data).logits\n",
     "predictions=torch.flatten(torch.argmax(logits, dim=-1))\n",
     "print(predictions)\n",
-    "print(test_dataset.labels)"
+    "print(ds.labels)"
    ]
   },
   {
@@ -88,18 +88,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6000)\n"
+      "Index          True Label          Prediction\n",
+      "  0                  123                  123\n",
+      "  1                   41                   12\n",
+      "  2                  160                  160\n",
+      "  3                   70                   70\n",
+      "  4                   62                    2\n",
+      "  5                    2                    1\n",
+      "  6                  225                  225\n",
+      "  7                   12                   13\n",
+      "  8                   74                   74\n",
+      "  9                  194                  194\n"
      ]
     }
    ],
    "source": [
-    "accuracy=(torch.sum((predictions==test_dataset.labels))/len(predictions))\n",
-    "print(accuracy)"
+    "ds.compare(predictions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.6000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy=(torch.sum((predictions==ds.labels))/len(predictions))\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +159,7 @@
    "source": [
     "top_5_preds=torch.topk(logits, dim=-1, k=5).indices\n",
     "print(top_5_preds)\n",
-    "labels=torch.unsqueeze(test_dataset.labels,dim=-1) \n",
+    "labels=torch.unsqueeze(ds.labels,dim=-1)\n",
     "labels=torch.cat((labels, labels, labels, labels, labels),-1)\n",
     "labels=torch.unsqueeze(labels,dim=1)\n",
     "top_5_acc=torch.sum(top_5_preds==labels)/labels.shape[0]\n",
@@ -141,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +177,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,15 +205,15 @@
     }
    ],
    "source": [
-    "logits=supervised(test_dataset.data).logits\n",
-    "predictions=torch.flatten(torch.argmax(logits, dim=-1))\n",
-    "print(predictions)\n",
-    "print(test_dataset.labels)"
+    "supervised_logits=supervised(ds.data).logits\n",
+    "supervised_predictions=torch.flatten(torch.argmax(supervised_logits, dim=-1))\n",
+    "print(supervised_predictions)\n",
+    "print(ds.labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,13 +225,13 @@
     }
    ],
    "source": [
-    "accuracy=(torch.sum((predictions==test_dataset.labels))/len(predictions))\n",
+    "accuracy=(torch.sum((supervised_predictions==ds.labels))/len(supervised_predictions))\n",
     "print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,13 +262,40 @@
     }
    ],
    "source": [
-    "top_5_preds=torch.topk(logits, dim=-1, k=5).indices\n",
-    "print(top_5_preds)\n",
-    "labels=torch.unsqueeze(test_dataset.labels,dim=-1) \n",
+    "supervised_top_5_preds=torch.topk(supervised_logits, dim=-1, k=5).indices\n",
+    "print(supervised_top_5_preds)\n",
+    "labels=torch.unsqueeze(ds.labels,dim=-1) \n",
     "labels=torch.cat((labels, labels, labels, labels, labels),-1)\n",
     "labels=torch.unsqueeze(labels,dim=1)\n",
-    "top_5_acc=torch.sum(top_5_preds==labels)/labels.shape[0]\n",
-    "print(top_5_acc)"
+    "supervised_top_5_acc=torch.sum(supervised_top_5_preds==labels)/labels.shape[0]\n",
+    "print(supervised_top_5_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index          True Label          Prediction\n",
+      "  0                  123                  123\n",
+      "  1                   41                    8\n",
+      "  2                  160                  160\n",
+      "  3                   70                   70\n",
+      "  4                   62                    2\n",
+      "  5                    2                    2\n",
+      "  6                  225                  225\n",
+      "  7                   12                  125\n",
+      "  8                   74                   74\n",
+      "  9                  194                  194\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds.compare(supervised_predictions)"
    ]
   }
  ],
