--- a/Notebooks/LoadBravaisLatticeModels.ipynb
+++ b/Notebooks/LoadBravaisLatticeModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset=DiffractionDataset(\"../Data/BravaisLattice_Data.pt\", categorical='Bravais Lattice')"
+    "ds=DiffractionDataset(\"../Data/BravaisLattice_Data.pt\", categorical='Bravais Lattice')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,15 +73,44 @@
     }
    ],
    "source": [
-    "logits=net(test_dataset.data).logits\n",
+    "logits=net(ds.data).logits\n",
     "predictions=torch.flatten(torch.argmax(logits, dim=-1))\n",
     "print(predictions)\n",
-    "print(test_dataset.labels)"
+    "print(ds.labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index          True Label          Prediction\n",
+      "  0     orthorhombic (P)     orthorhombic (P)\n",
+      "  1            cubic (F)            cubic (F)\n",
+      "  2        hexagonal (P)        hexagonal (P)\n",
+      "  3       tetragonal (P)       monoclinic (P)\n",
+      "  4     orthorhombic (P)     orthorhombic (P)\n",
+      "  5       monoclinic (C)        triclinic (P)\n",
+      "  6        hexagonal (P)        hexagonal (P)\n",
+      "  7            cubic (F)            cubic (F)\n",
+      "  8        hexagonal (P)        hexagonal (P)\n",
+      "  9       tetragonal (I)       tetragonal (I)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds.compare(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,13 +122,13 @@
     }
    ],
    "source": [
-    "accuracy=(torch.sum((predictions==test_dataset.labels))/len(predictions))\n",
+    "accuracy=(torch.sum((predictions==ds.labels))/len(predictions))\n",
     "print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +137,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -136,15 +165,42 @@
     }
    ],
    "source": [
-    "logits=supervised(test_dataset.data).logits\n",
-    "predictions=torch.flatten(torch.argmax(logits, dim=-1))\n",
-    "print(predictions)\n",
-    "print(test_dataset.labels)"
+    "logits=supervised(ds.data).logits\n",
+    "supervised_predictions=torch.flatten(torch.argmax(logits, dim=-1))\n",
+    "print(supervised_predictions)\n",
+    "print(ds.labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index          True Label          Prediction\n",
+      "  0     orthorhombic (P)       tetragonal (P)\n",
+      "  1            cubic (F)            cubic (F)\n",
+      "  2        hexagonal (P)        hexagonal (P)\n",
+      "  3       tetragonal (P)       tetragonal (I)\n",
+      "  4     orthorhombic (P)     orthorhombic (P)\n",
+      "  5       monoclinic (C)        triclinic (P)\n",
+      "  6        hexagonal (P)        hexagonal (P)\n",
+      "  7            cubic (F)            cubic (F)\n",
+      "  8        hexagonal (P)        hexagonal (P)\n",
+      "  9       tetragonal (I)       tetragonal (I)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds.compare(supervised_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +212,7 @@
     }
    ],
    "source": [
-    "accuracy=(torch.sum((predictions==test_dataset.labels))/len(predictions))\n",
+    "accuracy=(torch.sum((supervised_predictions==ds.labels))/len(predictions))\n",
     "print(accuracy)"
    ]
   }
