--- a/Notebooks/LoadBravaisLatticeModels.ipynb
+++ b/Notebooks/LoadBravaisLatticeModels.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "from Models.ResNet import ResnetConfig, ResnetClassifier\n",
+    "from Models.ResNet import ResnetClassifier\n",
     "from Data.Data import DiffractionDataset"
    ]
   },
@@ -19,20 +19,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Load dataset models\n",
     "ds=DiffractionDataset(\"../Data/BravaisLattice_Data.pt\", categorical='Bravais Lattice')\n",
-    "config = ResnetConfig(\n",
-    "        input_dim = 1,\n",
-    "        output_dim = 14,\n",
-    "        res_dims=[32, 64, 64, 64],\n",
-    "        res_kernel=[5, 7, 17, 13],\n",
-    "        res_stride=[4, 4, 5, 3],\n",
-    "        num_blocks=[2, 2, 2, 2],\n",
-    "        first_kernel_size = 13,\n",
-    "        first_stride = 1,\n",
-    "        first_pool_kernel_size = 7,\n",
-    "        first_pool_stride = 7,\n",
-    "    )\n",
-    "state_dict=torch.load('../Models/BravaisModels.pth')"
+    "resnet=ResnetClassifier(num_classes=14)\n",
+    "resnet.eval()\n",
+    "models=torch.load('../Models/BravaisModels.pth')"
    ]
   },
   {
@@ -52,10 +43,8 @@
     }
    ],
    "source": [
-    "#Semi-supervised Model using 50% of the data for labeled training\n",
-    "sgan=ResnetClassifier(config)\n",
-    "sgan.eval()\n",
-    "sgan.load_state_dict(state_dict['SGAN'])"
+    "#Load Semi-supervised Model using 50% of the data for labeled training\n",
+    "resnet.load_state_dict(models['SGAN'])"
    ]
   },
   {
@@ -67,17 +56,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 9,  0,  3,  5,  9, 13,  3,  0,  3, 11])\n",
-      "tensor([ 9,  0,  3, 12,  9,  4,  3,  0,  3, 11])\n",
-      "80.0\n"
+      "Predictions: tensor([ 9,  0,  3,  5,  9, 13,  3,  0,  3, 11])\n",
+      "Labels:      tensor([ 9,  0,  3, 12,  9,  4,  3,  0,  3, 11])\n",
+      "Accuracy: 80.0 %\n"
      ]
     }
    ],
    "source": [
-    "sgan_output=sgan(ds.data)\n",
-    "print(sgan_output.predictions)\n",
-    "print(ds.labels)\n",
-    "print(sgan_output.accuracy(ds.labels))"
+    "#Evaluate the model and print the accuracy\n",
+    "sgan_output=resnet(ds.data)\n",
+    "print(\"Predictions:\" ,sgan_output.predictions)\n",
+    "print(\"Labels:     \" ,ds.labels)\n",
+    "print(\"Accuracy:\" , sgan_output.accuracy(ds.labels), \"%\")"
    ]
   },
   {
@@ -106,6 +96,7 @@
     }
    ],
    "source": [
+    "#Compare the predictions of the SGAN to the labels\n",
     "ds.compare(sgan_output.predictions)"
    ]
   },
@@ -126,10 +117,8 @@
     }
    ],
    "source": [
-    "#Supervised Model using 90% of the data\n",
-    "supervised=ResnetClassifier(config)\n",
-    "supervised.eval()\n",
-    "supervised.load_state_dict(state_dict['Supervised'])"
+    "#Load the Supervised Model using 90% of the data\n",
+    "resnet.load_state_dict(models['Supervised'])"
    ]
   },
   {
@@ -141,17 +130,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([12,  0,  3, 11,  9, 13,  3,  0,  3, 11])\n",
-      "tensor([ 9,  0,  3, 12,  9,  4,  3,  0,  3, 11])\n",
-      "70.0\n"
+      "Predictions: tensor([12,  0,  3, 11,  9, 13,  3,  0,  3, 11])\n",
+      "Labels:      tensor([ 9,  0,  3, 12,  9,  4,  3,  0,  3, 11])\n",
+      "Accuracy: 70.0 %\n"
      ]
     }
    ],
    "source": [
-    "supervised_output=supervised(ds.data)\n",
-    "print(supervised_output.predictions)\n",
-    "print(ds.labels)\n",
-    "print(supervised_output.accuracy(ds.labels))"
+    "#Evaluate the model and print the accuracy\n",
+    "supervised_output=resnet(ds.data)\n",
+    "print(\"Predictions:\", supervised_output.predictions)\n",
+    "print(\"Labels:     \",ds.labels)\n",
+    "print(\"Accuracy:\",supervised_output.accuracy(ds.labels),\"%\")"
    ]
   },
   {
@@ -178,6 +168,7 @@
     }
    ],
    "source": [
+    "#Compare the predictions of the supervised model to the labels\n",
     "ds.compare(supervised_output.predictions)"
    ]
   },
@@ -205,6 +196,7 @@
     }
    ],
    "source": [
+    "#Compare the SGAN predictions to the Supervised model predictions\n",
     "ds.compare(sgan_output.predictions, supervised_output.predictions, ['SGAN', 'Supervised'])"
    ]
   }
